--- a/README
+++ b/README
@@ -1,6 +1,6 @@
- <h3 align="center">ProfX - a powerful TelePath</h3>
+ <h3>ProfX - a powerful TelePath</h3>
 
-  <p align="center">
+  <p>
     ProfX is a python-based client for the TelePath LIMS, able to retrieve and process a variety of data semi-automatically.
     <br />
 </p>
